[package]
name = "runa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
winit = { version = "0.31.0-beta.2", features = ["android-native-activity"] }
env_logger = "0.11.10"
log = { version = "0.4.29", features = [
	"max_level_debug",
	"release_max_level_debug",
] }
wgpu = "29.0.1"
pollster = "0.4.0"
tracing = "0.1.44"
bytemuck = { version = "1.24", features = ["derive"] }


[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "29.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
